--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
 
       <a href="#">
-        <h1>Sahil Srivastava</h1>
+        <h1 class="title">Sahil Srivastava</h1>
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
@@ -80,9 +80,9 @@
 
 
           <li class="nav-link resume">
-            <a id="resume-button-1" href= "pending"></a>  target="_blank"
+            <a id="resume-button-1" href= "./assets/resume/Sahil_Resume.pdf" target="_blank"
               class="btn btn-primary" download
-              onclick="window.open('pending')">Download Resume</a>
+              onclick="window.open('./assets/resume/Sahil_Resume.pdf')">Download Resume</a>
           </li>
 
         </ul>
@@ -107,7 +107,7 @@
 
           <div class="hero-banner">
 
-            <img class="home-img" src="pending" width="1500" height="1000"
+            <img class="home-img" src="./assets/images/gifpic-ezgif.com-crop.gif" width="1500" height="1000"
               loading="lazy" alt="Sahil's Photo">
 
             <div class="elem elem-1">
@@ -145,9 +145,9 @@
             <div class="btn-group">
               <a href="#contact" class="btn btn-primary blue">Contact Me</a>
 
-              <a id="resume-button-2" href="pending" class="btn btn-primary blue"
+              <a id="resume-button-2" href="./assets/resume/Sahil_Resume.pdf" class="btn btn-primary blue"
                 target="_blank" download
-                onclick="window.open('pending')">Download Resume</a>
+                onclick="window.open('./assets/resume/Sahil_Resume.pdf')">Download Resume</a>
             </div>
 
           </div>
@@ -165,14 +165,13 @@
 
       <section class="about section" id="about">
         <p class="section-subtitle" style="text-align: center;">About Me</p>
-        <h2 class="h2 section-title" style="text-align: center; margin-bottom: 50px;">pending </h2>
+        <h2 class="h2 section-title" style="text-align: center; margin-bottom: 50px;">Aspiring Software Developer </h2>
         <div class="container">
 
           <figure class="about-banner">
 
 
-            <img src="pending" width="800" height="652" loading="lazy" alt="Sahil's Photo"
-              class="home-img">
+            <img src="./assets/images/image-removebg-preview.png" width="800" height="473" loading="lazy" alt="Sahil's Photo" class="home-img">
 
 
             <div class="abs-icon abs-icon-1">
@@ -197,19 +196,19 @@
 
 
             <p id="user-detail-intro" class="section-text">
-              pending
+              an enthusiastic Information Technology student at Madan Mohan Malaviya University of Technology, Gorakhpur, with a strong academic record expected to graduate in May 2025. My journey in technology is driven by a passion for learning and a commitment to excellence.
             </p>
 
             <p class="section-text">
-              pending
+              I am passionate about leveraging my technical skills to solve real-world problems and am always open to new opportunities and collaborations. Let’s connect and explore how we can work together to drive innovation and achieve success.
             </p>
 
-            <h2 class="h2 section-title">Some of my interests apart from Coding:</h2>
+            <!-- <h2 class="h2 section-title">Some of my interests apart from Coding:</h2>
             <ul>
               <li>Singing</li>
               <li>Cooking</li>
 
-            </ul>
+            </ul> -->
 
             <!-- <a href="#portfolio" class="btn btn-primary blue">View Portfolio</a> -->
 
@@ -226,9 +225,9 @@
       <section class="section skills" id="skills">
         <div class="container">
 
-          <h3 class="section-text">
+          <h2 class="section-text">
             Technical Skills
-          </h3>
+          </h2>
           <div class="portfolio1">
 
             <div class="skills-card">
@@ -315,9 +314,9 @@
             </div>
 
           </div>
-          <h3 class="section-text" style="margin-top: 50px;">
+          <h2 class="section-text" style="margin-top: 50px;">
             Tools
-          </h3>
+          </h2>
           <div class="portfolio1">
 
             <div class="skills-card">
