--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 
 
           <li class="nav-link resume">
-            <a id="resume-button-1" href= "./assets/resume/Sahil_Resume.pdf" target="_blank"
+            <a id="resume-button-1" href= "./Sahil_Resume.pdf" target="_blank"
               class="btn btn-primary" download
-              onclick="window.open('./assets/resume/Sahil_Resume.pdf')">Download Resume</a>
+              onclick="window.open('./Sahil_Resume.pdf')">Download Resume</a>
           </li>
 
         </ul>
@@ -145,9 +145,9 @@
             <div class="btn-group">
               <a href="#contact" class="btn btn-primary blue">Contact Me</a>
 
-              <a id="resume-button-2" href="./assets/resume/Sahil_Resume.pdf" class="btn btn-primary blue"
+              <a id="resume-button-2" href="./Sahil_Resume.pdf" class="btn btn-primary blue"
                 target="_blank" download
-                onclick="window.open('./assets/resume/Sahil_Resume.pdf')">Download Resume</a>
+                onclick="window.open('./Sahil_Resume.pdf')">Download Resume</a>
             </div>
 
           </div>
@@ -437,7 +437,7 @@
                 <div class="card-content">
                   
 
-                  <p class="project-title">Gather Hub 🏨</p>
+                  <p class="project-title">Gather Hub</p>
 
                   <h3 class="h3 card-title">Online Meeting Application</h3>
                   <p class="project-description">It is a video chat application designed for online communication,offering features similar to Zoom. It allows users to connect, collaborate, and communicate in real-time through video calls.</p>
@@ -462,72 +462,70 @@
               </div>
             </li>
 
-            <!-- <li>
-              <div class="project-card"
-                style="background-image:linear-gradient(rgba(51, 51, 51, 0.5), hsl(246,23%,18%)), url('./assets/images/Screenshot\ 2024-01-31\ 170307.png');">
-                <img src="./assets/images/hero-bg.jpg" alt="name" style="display: none;">
-                <div class="card-content">
-
-                  <p class="project-title">RideShareX 🚖</p>
-
-                  <h3 class="h3 card-title">Web Application for Online Cab Booking</h3>
-                  <p class="project-description">Developed a website for one-click cab ride reservations using HTML,
-                    CSS, JavaScript, Express, Node.js, MongoDB, and Mongoose.
-                    Implemented various features including user authentication, cab booking, ride tracking including
-                    admin panel.</p>
-
-                  <div class="btndiv">
-                    <a class="project-github-link" href="https://github.com/shraddha-gawde/rideShareX-cab_Service"
-                      target="_blank"><span class="btn-link">
-                        <span class="iconify logo" data-icon="uiw:github" data-inline="false" data-width="30px"
-                          data-height="30px"></span>
-
-                      </span></a>
-                    <a class="project-deployed-link" href="https://tech-sankat-nivaaran-4321.vercel.app/"
-                      target="_blank"><span class="btn-link">
-                        <span class="iconify logo" data-icon="ph:link-simple" data-inline="false" data-width="30px"
-                          data-height="30px"></span>
-
-                      </span></a>
-                  </div>
-
-
-                </div>
-              </div>
-            </li>
-
-            <li> -->
-              <!-- <div class="project-card"
-                style="background-image:linear-gradient(rgba(51, 51, 51, 0.5), hsl(246,23%,18%)), url('./assets/images/Capture\ copy.jpg');">
-                <img src="./assets/images/hero-bg.jpg" alt="name" style="display: none;">
-                <div class="card-content">
-
-                  <p class="project-title">SpeedSter 🏎️</p>
-
-                  <h3 class="h3 card-title">Web Application for multiplayer type Racing</h3>
-                  <p class="project-description">Speedster offers an engaging array of typing games designed to make practicing fun and effective. Whether you're a seasoned typist looking to maintain your speed or a beginner eager to improve, Speedster has something for you.</p>
-
-                  <div class="btndiv">
-                    <a class="project-github-link" href="https://github.com/shraddha-gawde/Speedster"
-                      target="_blank"><span class="btn-link">
-                        <span class="iconify logo" data-icon="uiw:github" data-inline="false" data-width="30px"
-                          data-height="30px"></span>
-
-                      </span></a>
-                    <a class="project-deployed-link" href="https://debug-artisan-2345.vercel.app/"
-                      target="_blank"><span class="btn-link">
-                        <span class="iconify logo" data-icon="ph:link-simple" data-inline="false" data-width="30px"
-                          data-height="30px"></span>
-
-                      </span></a>
-                  </div>
-
-
-                </div>
-              </div>
-            </li>
-
             <li>
+              <div class="project-card"
+                style="background-image:linear-gradient(rgba(51, 51, 51, 0.5), hsl(246,23%,18%)), url('./assets/images/edu_img.png');">
+                <img src="./assets/images/hero-bg.jpg" alt="name" style="display: none;">
+                <div class="card-content">
+
+                  <p class="project-title">Edusprint</p>
+
+                  <h3 class="h3 card-title">Learning Management System</h3>
+                  <p class="project-description">Developed a comprehensive learning platform that enables you to explore and enroll in courses offered by some of the world's most renowned universities.</p>
+
+                  <div class="btndiv">
+                    <a class="project-github-link" href="https://github.com/sahilsrivastava25/Learning-Management-System"
+                      target="_blank"><span class="btn-link">
+                        <span class="iconify logo" data-icon="uiw:github" data-inline="false" data-width="30px"
+                          data-height="30px"></span>
+
+                      </span></a>
+                    <a class="project-deployed-link" href="https://edusprint.vercel.app/"
+                      target="_blank"><span class="btn-link">
+                        <span class="iconify logo" data-icon="ph:link-simple" data-inline="false" data-width="30px"
+                          data-height="30px"></span>
+
+                      </span></a>
+                  </div>
+
+
+                </div>
+              </div>
+            </li>
+
+            
+              <li>
+                <div class="project-card"
+                style="background-image:linear-gradient(rgba(51, 51, 51, 0.5), hsl(246,23%,18%)), url('./assets/images/sort_img.png');">
+                <img src="./assets/images/hero-bg.jpg" alt="name" style="display: none;">
+                <div class="card-content">
+
+                  <p class="project-title">Sorting Visualiser</p>
+
+                  <h3 class="h3 card-title">A tool for visualising various sorting algorithms</h3>
+                  <p class="project-description">An interactive tool that visually demonstrates sorting algorithms like Bubble Sort, Merge Sort, and Quick Sort. It features real-time animations, user controls for sorting speed and array size, and a responsive design for accessibility across all devices.</p>
+
+                  <div class="btndiv">
+                    <a class="project-github-link" href="https://github.com/sahilsrivastava25/Sorting-Visualizer"
+                      target="_blank"><span class="btn-link">
+                        <span class="iconify logo" data-icon="uiw:github" data-inline="false" data-width="30px"
+                          data-height="30px"></span>
+
+                      </span></a>
+                    <a class="project-deployed-link" href="https://sorting-visualizer-bay.vercel.app/"
+                      target="_blank"><span class="btn-link">
+                        <span class="iconify logo" data-icon="ph:link-simple" data-inline="false" data-width="30px"
+                          data-height="30px"></span>
+
+                      </span></a>
+                  </div>
+
+
+                </div>
+              </div>
+            </li>
+
+            <!--<li>
               <div class="project-card"
                 style="background-image:linear-gradient(rgba(51, 51, 51, 0.5), hsl(246,23%,18%)), url('./assets/images/Screenshot\ 2024-01-31\ 200237.png');">
                 <img src="./assets/images/hero-bg.jpg" alt="name" style="display: none;">
